--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
@@ -38,8 +38,8 @@
         </p>
         <ul>
             <li>This function manages the horizontal movement of the character, taking into account various factors such as the character's grounded or airborne state.</li> <br>
-            <li>It automatically limits the character's movement if another action, such as 'dash,' is being performed.</li> <br>
-            <li>If a combat system is in place, it considers attack configurations and may restrict the character's movement accordingly.</li> <br>
+            <li>It automatically limits the character's movement if another action, such as 'dash,' is being performed. (See also: <b>HumanoidController</b>.<a class="redirect-link" href="try-dashing.html">TryDashing</a>)</li> <br>
+            <li>If a combat system is in place, it considers attack configurations and may restrict the character's movement accordingly. (See also: <a class="redirect-link" href="../../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a>)</li> <br>
         </ul>
         <p>
             This example implements the function to facilitate character movement:
