--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
@@ -38,9 +38,7 @@
             <br> <br>
             In accordance with the Ledge Grab configuration in the '<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>' component, when a ledge is detected, your
             character will be able to grab it. You have the option to initiate a grab either automatically, by calling '<b>LedgeGrab();</b>' without passing any parameters, or
-            by specifying a custom condition, such as a key press by the player. In the inspector of the controller, you can specify the maximum time that the character is able to
-            hold a ledge, before being forced to cancel it, by configuring the '<b>maxLedgeGrabTime</b>' value.  Further customization of the ledge grab mechanic can be achieved
-            by fine-tuning the settings of the '<a class="redirect-link" href="../../CHARACTER-LEDGE-GRAB/character-ledge-grab.html">CharacterLedgeGrab</a>' component.
+            by specifying a custom condition, such as a key press by the player.
             <br> <br>
             This example incorporates the ledge grab mechanic, specifying that the player must run toward a wall for it to be activated:
         </p>
