--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/is-ledge-climbing.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/is-ledge-climbing.html
@@ -27,9 +27,8 @@
         <p>
             Indicates whether the character is currently climbing a ledge.
             <br> <br>
-            This property indicates whether the character is climbing a ledge. It returns <b>true</b> if <a class="redirect-link" href="ledge-detected.html">LedgeDetected</a> is true
-            and the <a class="redirect-link" href="../PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a> function of the <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>
-            class is referenced in your custom controller script.
+            This property will return <b>true</b> if <a class="redirect-link" href="ledge-detected.html">LedgeDetected</a> is true and the <a class="redirect-link" href="../PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a>
+            function of the <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a> class is called in your custom controller script.
             <br> <br>
             If you need to access this property through a class that inherits from <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>, you can do
             so directly. Alternatively, if you intend to access it from an external script, you need to reference the corresponding controller instance and access it accordingly.
