--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-exit.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-exit.html
@@ -41,12 +41,9 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 {
     [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a> m_HumanoidController;
     
-    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Start.html">Start</a>()
     {
         m_HumanoidController.<b>OnLedgeExit</b> += HumanoidController_OnLedgeExit;
-
-        // Exercise caution when subscribing to events. If you plan to initialize 'm_HumanoidController' within the 'Awake' function,
-        // ensure that the event subscription takes place in the 'Start' method instead.
     }
 
     private void HumanoidController_OnLedgeExit(object sender, System.EventArgs e)
