Character Combat revision.

--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/can-move-while-casting-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/can-move-while-casting-attack.html
@@ -38,6 +38,9 @@
             <br><br>
             Based on the attack configuration, the combat system may restrict the character's movement by manipulating their velocity. To facilitate this, it is necessary
             to call this function immediately after calculating the character's velocity in your custom controller's script.
+            <br>
+            It's worth noting that the <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>
+            class is already designed to handle such restrictions by utilizing this function.
         </p>
         <br>
         <p>
