--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -54,11 +54,6 @@
                     <td><a class="redirect-link" href="SCRIPTING/CHARACTER-COMBAT/character-combat.html">Scripting</a></td>
                 </tr>
                 <tr>
-                    <td class="label-classes">AttackSO</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ATTACK-SO/attack-so.html">Scripting</a></td>
-                </tr>
-                <tr>
                     <td class="label-classes">CombatSystemProjectile</td>
                     <td class="description-manual"><a class="redirect-link" href="MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Scripting</a></td>
@@ -67,6 +62,22 @@
                     <td class="label-classes">EntityHealth</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ENTITY-HEALTH/entity-health.html">Scripting</a></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
+            <span class="table-title">Combat System - Scriptable Objects</span>
+            <table>
+                <tr>
+                    <td class="label-classes">AttackSO</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ATTACK-SO/attack-so.html">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">ArmourSO</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ARMOUR-SO/armour-so.html">Scripting</a></td>
                 </tr>
             </table>
         </div>
