EntityHealth - Properties Documentation

--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/armour-data.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/armour-data.html
@@ -32,8 +32,8 @@
         </p>
         <br>
         <p>
-            Here is an example of how you could use the property. Create a new game object with a collider of your choice and set it as a trigger. Add to that newly created game
-            object the tag "<b>ArmourPowerUp</b>". Attach this script to a character. When the character collides with that game object, the armour data of the <a class="redirect-link" href="../entity-health.html">EntityHealth</a>
+            Here is an example of how you could use the property. Create a new game object with a <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Collider2D.html">Collider2D</a> of your choice and set it as a <b>trigger</b>. Add to that newly created game
+            object the tag "<b>ArmourPowerUp</b>". Finally, attach this script to your character. When the character collides with that game object, the armour data of the <a class="redirect-link" href="../entity-health.html">EntityHealth</a>
             script will change to the one defined by the following script.
         </p>
 <pre class="code-block">
