--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -54,7 +54,7 @@
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/regen-health-points.html">RegenHealthPoints</a></td>
-                    <td class="description">The amount of health points the entity should regenrate, once the health regeneration effect has been triggered.</td>
+                    <td class="description">The amount of health points the entity should regenerate, once the health regeneration effect has been triggered.</td>
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/regen-trigger-time.html">RegenTriggerTime</a></td>
