--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/is-regenerating-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/is-regenerating-health.html
@@ -21,22 +21,35 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../entity-health.html">EntityHealth</a>.IsRegeneratingHealth</h1>
         <h2>Declaration</h2>
-        <p>public bool <b>IsRegeneratingHealth</b> { get; set; }</p>
+        <p>public bool <b>IsRegeneratingHealth</b> { get; }</p>
         <br>
         <h2>Description</h2>
         <p>
             Indicates whether the entity is regenerating health points.
-        </p>
-        <br>
-        <p>
-            Example.
+            <br><br>
+            This property indicates whether the entity is currently in the process of regenerating health points. When set to true, it signifies that the
+            entity's health points are actively being restored over time through a regeneration effect. You can utilize this property to monitor the health
+            regeneration state of the entity, enabling the implementation of gameplay mechanics or visual feedback tailored to the regenerative process.
         </p>
 <pre class="code-block">
 using UnityEngine;
 
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code
+    private <a class="redirect-link" href="../entity-health.html">EntityHealth</a> healthScript;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        healthScript = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../entity-health.html">EntityHealth</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (healthScript.<b>IsRegeneratingHealth</b>)
+        {
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The entity is regenerating health.");
+        }
+    }
 }
 </pre>
 </div>
