EntityHealth - Added Events section.

--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -26,6 +26,24 @@
         </p>
         <br>
         <div class="table-division">
+            <span class="table-title">Events</span>
+            <table>
+                <tr>
+                    <td class="label"><a class="events" href="EVENTS/on-entity-alive.html">OnEntityAlive</a></td>
+                    <td class="description"></td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="events" href="EVENTS/on-entity-death.html">OnEntityDeath</a></td>
+                    <td class="description"></td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="events" href="EVENTS/on-take-damage.html">OnTakeDamage</a></td>
+                    <td class="description"></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
